<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start_item"
        android:icon="@drawable/start_menu_item"
        android:title="@string/start_random"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/new_item_menu_item"
        android:icon="@drawable/add_menu_item"
        android:title="@string/add_new"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/delete_item_menu_item"
        android:icon="@drawable/delete_menu_item"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/download_menu_item"
        android:icon="@drawable/download_menu_item"
        android:title="@string/download"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/upload_menu_item"
        android:icon="@drawable/upload_menu_item"
        android:title="@string/upload"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/edit_item_menu_item"
        android:icon="@drawable/edit_menu_item"
        android:title="@string/edit"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/sort_item_menu_item"
        android:icon="@drawable/sort_menu_item"
        android:title="@string/sort"
        app:showAsAction="ifRoom|withText" />
</menu>